@@ -7,6 +7,9 @@ OCaml 3.13.0:
 Compilers:
 - Revised simplification of let-alias (PR#5205, PR#5288)
 
+Native-code compiler:
+- Optimized handling of partially-applied functions (PR#5287)
+
 Standard library:
 - Added float functions "hypot" and "copysign" (PR#3806, PR#4752, PR#5246)
 - Hashtbl:
